# aoc-2022

./: .gitignore  README.md  gen-hex-inputs.sh
inputs/: d1-hex.txt  d1test-hex.txt  d2-hex.txt  d2test-hex.txt  d3-hex.txt  d3test-hex.txt  d4-hex.txt  d4test-hex.txt  d5-hex.txt  d5test-hex.txt  d6-hex.txt  d7-hex.txt  d7test-hex.txt  d8-hex.txt  d8test-hex.txt  d9-hex.txt  d9test-hex.txt
rust/: Cargo.toml
rust/src/: bench.rs  d1bin.rs  d1lib.rs  d2bin.rs  d2lib.rs  d3bin.rs  d3lib.rs  d4bin.rs  d4lib.rs  d5bin.rs  d5lib.rs  d6bin.rs  d6lib.rs  d7bin.rs  d7lib.rs  d8bin.rs  d8lib.rs  d9bin.rs  d9lib.rs  util.rs
sv/common/: many-head-rom.sv  sync-cell.sv  trailing-zeros.sv  tree-max.sv
sv/d8/: d8.sv  d8p2.sv  results.txt
