[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "util"
path = "src/util.rs"

[[bin]]
name = "day1"
path = "src/d1bin.rs"

[[bin]]
name = "day2"
path = "src/d2bin.rs"

[[bin]]
name = "day3"
path = "src/d3bin.rs"

[[bin]]
name = "day4"
path = "src/d4bin.rs"

[[bin]]
name = "day5"
path = "src/d5bin.rs"

[[bin]]
name = "day6"
path = "src/d6bin.rs"

[[bin]]
name = "day7"
path = "src/d7bin.rs"

[[bin]]
name = "day8"
path = "src/d8bin.rs"

[[bin]]
name = "day9"
path = "src/d9bin.rs"

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false

[dependencies]
num_cpus = "1.15.0"
# arrayvec = "0.7.2"
# rayon = "1.6.1"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[profile.release]
lto = "fat"

[profile.bench]
lto = "fat"

[features]
large = []
d7large = []
d7deep1 = []
d7deep2 = []
